--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Filmoteka</title>
 
@@ -30,6 +33,12 @@
       href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
     />
 
+    <!-- Style basicLightbox -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/basicLightbox/5.0.4/basicLightbox.min.css"
+    />
+
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
@@ -43,7 +52,7 @@
               href="./index.html"
             >
               <svg class="logo__icon" width="24" height="24">
-                <use href="./images/logo/logo.svg#icon-logo"></use>
+                <use href="./images/icon/sprite.svg#icon-logo"></use>
               </svg>
               <span class="cssanimation lePushReleaseFrom sequence"
                 >Filmoteka</span
